--- a/views/admin/adminLogin.ejs
+++ b/views/admin/adminLogin.ejs
@@ -91,7 +91,7 @@
                             <a class="dropdown-item" href="#"><i class="material-icons md-settings"></i>Account Settings</a>
 
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item text-danger" href="#"><i class="material-icons md-exit_to_app"></i>Logout</a>
+                            <a class="dropdown-item text-danger" href="/admin/logout"><i class="material-icons md-exit_to_app"></i>Logout</a>
                         </div>
                     </li>
                 </ul>
@@ -102,7 +102,7 @@
     <div class="card mx-auto card-login" >
         <div class="card-body" >
             <h4 class="card-title mb-4 text-center">Admin Login</h4>
-            <form id="loginAdmin" action="/login"  method="post">
+            <form id="logForm" action="/admin/adminlogin" method="post">
                 <% if(locals.message) { %>
                     <div  class="alert alert-success"> <%= locals.message %></div>
                     <% } %>
