--- a/views/admin/userList.ejs
+++ b/views/admin/userList.ejs
@@ -90,7 +90,7 @@
                             <a class="dropdown-item" href="#"><i class="material-icons md-settings"></i>Account Settings</a>
 
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item text-danger" href="#"><i class="material-icons md-exit_to_app"></i>Logout</a>
+                            <a class="dropdown-item text-danger" href="/admin/logout"><i class="material-icons md-exit_to_app"></i>Logout</a>
                         </div>
                     </li>
                 </ul>
