--- a/views/admin/productCategory.ejs
+++ b/views/admin/productCategory.ejs
@@ -16,7 +16,7 @@
         <nav>
             <ul class="menu-aside">
                 <li class="menu-item ">
-                    <a class="menu-link" href="/admin"> <i class="icon material-icons md-home"></i>
+                    <a class="menu-link" href="/admin/adminHome"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
                 </li>
@@ -32,19 +32,14 @@
                         <span class="text">Users</span>
                     </a>
                 </li>
-                <li class="menu-item ">
-                    <a class="menu-link" href="/admin/addProducts"> <i class="icon material-icons md-add_box"></i>
-                        <span class="text">Add product</span>
-                    </a>
-                    
-                </li>
+              
                
-                <li class="menu-item ">
-                    <a class="menu-link" href="/admin/account"> <i class="icon material-icons md-person"></i>
+                <!-- <li class="menu-item ">
+                    <a class="menu-link" href="/admin/adminlogin"> <i class="icon material-icons md-person"></i>
                         <span class="text">Account</span>
                     </a>
                     
-                </li>
+                </li> -->
                 <li class="menu-item active">
                     <a class="menu-link" href="/admin/category"> <i class="icon material-icons md-category"></i>
                         <span class="text">Category</span>
@@ -105,35 +100,29 @@
             <p>Add, edit or delete a category</p>
         </div>
         <div>
-            <input type="text" placeholder="Search Categories" class="form-control bg-white">
+            <input type="text"  placeholder="Search Categories" class="form-control bg-white">
         </div>
     </div>
     <div class="card">
         <div class="card-body">
             <div class="row">
                 <div class="col-md-3">
-                    <form>
+                    <form id="createCat" action="/admin/productCategory" method="post">
                         <div class="mb-4">
-                            <label for="product_name" class="form-label">Name</label>
-                            <input type="text" placeholder="Type here" class="form-control" id="product_name" />
+                            <p class="form-label"><h6>Add New Category</h6></p>
+                            <label for="product-name" class="form-label">Name</label>
+                            <input type="text" name="name" placeholder="Type here" class="form-control" id="product_name" />
                         </div>
-                        <div class="mb-4">
-                            <label for="product_slug" class="form-label">Slug</label>
-                            <input type="text" placeholder="Type here" class="form-control" id="product_slug" />
-                        </div>
-                        <div class="mb-4">
-                            <label class="form-label">Parent</label>
-                            <select class="form-select">
-                                <option>Clothes</option>
-                                <option>T-Shirts</option>
-                            </select>
-                        </div>
+                        <p><div id="error1" style="display: none;" class="alert alert-danger err"></div></p>
+
                         <div class="mb-4">
                             <label class="form-label">Description</label>
-                            <textarea placeholder="Type here" class="form-control"></textarea>
+                            <textarea name="description"  placeholder="Type here" class="form-control" id="product_description"></textarea>
                         </div>
+                        <p><div id="error2" style="display: none;" class="alert alert-danger err"></div></p>
+
                         <div class="d-grid">
-                            <button class="btn btn-primary">Create category</button>
+                            <button type="submit" class="btn btn-primary">Create category</button>
                         </div>
                     </form>
                 </div>
@@ -150,7 +139,6 @@
                                     <th>ID</th>
                                     <th>Name</th>
                                     <th>Description</th>
-                                    <th>Slug</th>
                                     <th>Order</th>
                                     <th class="text-end">Action</th>
                                 </tr>
@@ -171,8 +159,7 @@
                                         <div class="dropdown">
                                             <a href="#" data-bs-toggle="dropdown" class="btn btn-light rounded btn-sm font-sm"> <i class="material-icons md-more_horiz"></i> </a>
                                             <div class="dropdown-menu">
-                                                <a class="dropdown-item" href="#">View detail</a>
-                                                <a class="dropdown-item" href="#">Edit info</a>
+                                                <a class="dropdown-item" href="/admin/categoryEdit">Edit info</a>
                                                 <a class="dropdown-item text-danger" href="#">Delete</a>
                                             </div>
                                         </div> <!-- dropdown //end -->
@@ -189,130 +176,6 @@
                                     <td>Fashions for Women</td>
                                     <td>/women</td>
                                     <td>2</td>
-                                    <td class="text-end">
-                                        <div class="dropdown">
-                                            <a href="#" data-bs-toggle="dropdown" class="btn btn-light rounded btn-sm font-sm"> <i class="material-icons md-more_horiz"></i> </a>
-                                            <div class="dropdown-menu">
-                                                <a class="dropdown-item" href="#">View detail</a>
-                                                <a class="dropdown-item" href="#">Edit info</a>
-                                                <a class="dropdown-item text-danger" href="#">Delete</a>
-                                            </div>
-                                        </div> <!-- dropdown //end -->
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="text-center">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="" />
-                                        </div>
-                                    </td>
-                                    <td>3</td>
-                                    <td><b>Kids clothes</b></td>
-                                    <td>Clothes for kids</td>
-                                    <td>/kids</td>
-                                    <td>3</td>
-                                    <td class="text-end">
-                                        <div class="dropdown">
-                                            <a href="#" data-bs-toggle="dropdown" class="btn btn-light rounded btn-sm font-sm"> <i class="material-icons md-more_horiz"></i> </a>
-                                            <div class="dropdown-menu">
-                                                <a class="dropdown-item" href="#">View detail</a>
-                                                <a class="dropdown-item" href="#">Edit info</a>
-                                                <a class="dropdown-item text-danger" href="#">Delete</a>
-                                            </div>
-                                        </div> <!-- dropdown //end -->
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="text-center"><i class="material-icons md-subdirectory_arrow_right text-muted"></i></td>
-                                    <td>4</td>
-                                    <td><b>Hot Gifts</b></td>
-                                    <td>Hot Gifts</td>
-                                    <td>/gifts</td>
-                                    <td>4</td>
-                                    <td class="text-end">
-                                        <div class="dropdown">
-                                            <a href="#" data-bs-toggle="dropdown" class="btn btn-light rounded btn-sm font-sm"> <i class="material-icons md-more_horiz"></i> </a>
-                                            <div class="dropdown-menu">
-                                                <a class="dropdown-item" href="#">View detail</a>
-                                                <a class="dropdown-item" href="#">Edit info</a>
-                                                <a class="dropdown-item text-danger" href="#">Delete</a>
-                                            </div>
-                                        </div> <!-- dropdown //end -->
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="text-center"><i class="material-icons md-subdirectory_arrow_right text-muted"></i></td>
-                                    <td>5</td>
-                                    <td><b>Electronics</b></td>
-                                    <td>Electronics</td>
-                                    <td>/electr</td>
-                                    <td>5</td>
-                                    <td class="text-end">
-                                        <div class="dropdown">
-                                            <a href="#" data-bs-toggle="dropdown" class="btn btn-light rounded btn-sm font-sm"> <i class="material-icons md-more_horiz"></i> </a>
-                                            <div class="dropdown-menu">
-                                                <a class="dropdown-item" href="#">View detail</a>
-                                                <a class="dropdown-item" href="#">Edit info</a>
-                                                <a class="dropdown-item text-danger" href="#">Delete</a>
-                                            </div>
-                                        </div> <!-- dropdown //end -->
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="text-center">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="" />
-                                        </div>
-                                    </td>
-                                    <td>6</td>
-                                    <td><b>Accessories</b></td>
-                                    <td>Accessories</td>
-                                    <td>/accessories</td>
-                                    <td>6</td>
-                                    <td class="text-end">
-                                        <div class="dropdown">
-                                            <a href="#" data-bs-toggle="dropdown" class="btn btn-light rounded btn-sm font-sm"> <i class="material-icons md-more_horiz"></i> </a>
-                                            <div class="dropdown-menu">
-                                                <a class="dropdown-item" href="#">View detail</a>
-                                                <a class="dropdown-item" href="#">Edit info</a>
-                                                <a class="dropdown-item text-danger" href="#">Delete</a>
-                                            </div>
-                                        </div> <!-- dropdown //end -->
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="text-center">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="" />
-                                        </div>
-                                    </td>
-                                    <td>7</td>
-                                    <td><b>Jewellery</b></td>
-                                    <td>Jewellery</td>
-                                    <td>/jewel</td>
-                                    <td>7</td>
-                                    <td class="text-end">
-                                        <div class="dropdown">
-                                            <a href="#" data-bs-toggle="dropdown" class="btn btn-light rounded btn-sm font-sm"> <i class="material-icons md-more_horiz"></i> </a>
-                                            <div class="dropdown-menu">
-                                                <a class="dropdown-item" href="#">View detail</a>
-                                                <a class="dropdown-item" href="#">Edit info</a>
-                                                <a class="dropdown-item text-danger" href="#">Delete</a>
-                                            </div>
-                                        </div> <!-- dropdown //end -->
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="text-center">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="" />
-                                        </div>
-                                    </td>
-                                    <td>8</td>
-                                    <td><b>Interiors</b></td>
-                                    <td>Interiors</td>
-                                    <td>/interior</td>
-                                    <td>8</td>
                                     <td class="text-end">
                                         <div class="dropdown">
                                             <a href="#" data-bs-toggle="dropdown" class="btn btn-light rounded btn-sm font-sm"> <i class="material-icons md-more_horiz"></i> </a>
