--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -141,9 +141,9 @@
                                 <a class="mobile-account-active" href="#">My Account <i class="fa fa-angle-down"></i></a>
                                 <div class="lang-curr-dropdown account-dropdown-active">
                                     <ul>
-                                        <li><a href="#">Login</a></li>
-                                        <li><a href="#">Creat Account</a></li>
-                                        <li><a href="my-account.html">My Account</a></li>
+                                        <li><a href="/login">Login</a></li>
+                                        <li><a href="/signup">Creat Account</a></li>
+                                        <li><a href="#">My Account</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -186,7 +186,7 @@
         <div class="product-slider-area bg-gray-2 " >
             <div class="product-slider-active-5" >
                 <div class="single-product-slider text-center">
-                    <a href="product-details.ejs"><img src="assets/userAssets/images/product/pro-slider-4.png" alt="product"></a>
+                    <a href="product-details"><img src="assets/userAssets/images/product/pro-slider-4.png" alt="product"></a>
                     <h3>Lace-up suede sneake</h3>
                     <span>$ 49.99</span>
                 </div>
