--- a/views/user/page-404.ejs
+++ b/views/user/page-404.ejs
@@ -11,27 +11,27 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/userAssets/images/favicon.png">
 
     <!-- All CSS is here
 	============================================ -->
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/userAssets/css/vendor/bootstrap.min.css">
     <!-- Icon Font CSS -->
-    <link rel="stylesheet" href="assets/css/vendor/font-awesome.css">
-    <link rel="stylesheet" href="assets/css/vendor/dlicon.css">
+    <link rel="stylesheet" href="assets/userAssets/css/vendor/font-awesome.css">
+    <link rel="stylesheet" href="assets/userAssets/css/vendor/dlicon.css">
     <!-- Others CSS -->
-    <link rel="stylesheet" href="assets/css/plugins/owl-carousel.css">
-    <link rel="stylesheet" href="assets/css/plugins/slick.css">
-    <link rel="stylesheet" href="assets/css/plugins/magnific-popup.css">
-    <link rel="stylesheet" href="assets/css/plugins/jarallax.css">
-    <link rel="stylesheet" href="assets/css/plugins/easyzoom.css">
-    <link rel="stylesheet" href="assets/css/plugins/animate.css">
-    <link rel="stylesheet" href="assets/css/plugins/fullpage.css">
-    <link rel="stylesheet" href="assets/css/plugins/jquery-ui.css">
-    <link rel="stylesheet" href="assets/css/plugins/select2.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/userAssets/css/plugins/owl-carousel.css">
+    <link rel="stylesheet" href="assets/userAssets/css/plugins/slick.css">
+    <link rel="stylesheet" href="assets/userAssets/css/plugins/magnific-popup.css">
+    <link rel="stylesheet" href="assets/userAssets/css/plugins/jarallax.css">
+    <link rel="stylesheet" href="assets/userAssets/css/plugins/easyzoom.css">
+    <link rel="stylesheet" href="assets/userAssets/css/plugins/animate.css">
+    <link rel="stylesheet" href="assets/userAssets/css/plugins/fullpage.css">
+    <link rel="stylesheet" href="assets/userAssets/css/plugins/jquery-ui.css">
+    <link rel="stylesheet" href="assets/userAssets/css/plugins/select2.min.css">
+    <link rel="stylesheet" href="assets/userAssets/css/style.css">
 
 </head>
 
@@ -43,11 +43,11 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="error-content text-center">
-                            <img src="assets/images/banner/error.png" alt="banner">
+                            <img src="assets/userAssets/images/banner/error.png" alt="banner">
                             <h3>Page cannot be found!</h3>
                             <p>It looks like nothing was found at this locations.</p>
                             <div class="btn-style-1 text-center">
-                                <a class="btn-border-black2" href="index.html">
+                                <a class="btn-border-black2" href="/">
                                     <div class="btn-viewmore-normal btn-ptb-3 btn-viewmore-bg-transparent btn-viewmore-common btn-font-3">
                                         <span>Back to home</span>
                                     </div>
@@ -68,37 +68,37 @@
 ============================================ -->
 
     <!-- Modernizer JS -->
-    <script src="assets/js/vendor/modernizr-3.11.7.min.js"></script>
+    <script src="assets/userAssets/js/vendor/modernizr-3.11.7.min.js"></script>
     <!-- jquery -->
-    <script src="assets/js/vendor/jquery-v3.6.0.min.js"></script>
+    <script src="assets/userAssets/js/vendor/jquery-v3.6.0.min.js"></script>
     <!-- Popper JS -->
-    <script src="assets/js/vendor/popper.js"></script>
+    <script src="assets/userAssets/js/vendor/popper.js"></script>
     <!-- Bootstrap JS -->
-    <script src="assets/js/vendor/bootstrap.min.js"></script>
-    <script src="assets/js/plugins/owl-carousel.js"></script>
-    <script src="assets/js/plugins/slick.js"></script>
-    <script src="assets/js/plugins/jarallax.min.js"></script>
-    <script src="assets/js/plugins/countdown.js"></script>
-    <script src="assets/js/plugins/magnific-popup.js"></script>
-    <script src="assets/js/plugins/instafeed.js"></script>
-    <script src="assets/js/plugins/tilt.js"></script>
-    <script src="assets/js/plugins/images-loaded.js"></script>
-    <script src="assets/js/plugins/isotope.js"></script>
-    <script src="assets/js/plugins/scrolloverflow-fullpage.js"></script>
-    <script src="assets/js/plugins/fullpage.js"></script>
-    <script src="assets/js/plugins/jquery-ui.js"></script>
-    <script src="assets/js/plugins/jquery-ui-touch-punch.js"></script>
-    <script src="assets/js/plugins/easyzoom.js"></script>
-    <script src="assets/js/plugins/resizesensor.js"></script>
-    <script src="assets/js/plugins/sticky-sidebar.js"></script>
-    <script src="assets/js/plugins/scrollup.js"></script>
-    <script src="assets/js/plugins/select2.min.js"></script>
-    <script src="assets/js/plugins/cookie.js"></script>
-    <script src="assets/js/plugins/bpopup.js"></script>
-    <script src="assets/js/plugins/wow.js"></script>
-    <script src="assets/js/plugins/ajax-mail.js"></script>
+    <script src="assets/userAssets/js/vendor/bootstrap.min.js"></script>
+    <script src="assets/userAssets/js/plugins/owl-carousel.js"></script>
+    <script src="assets/userAssets/js/plugins/slick.js"></script>
+    <script src="assets/userAssets/js/plugins/jarallax.min.js"></script>
+    <script src="assets/userAssets/js/plugins/countdown.js"></script>
+    <script src="assets/userAssets/js/plugins/magnific-popup.js"></script>
+    <script src="assets/userAssets/js/plugins/instafeed.js"></script>
+    <script src="assets/userAssets/js/plugins/tilt.js"></script>
+    <script src="assets/userAssets/js/plugins/images-loaded.js"></script>
+    <script src="assets/userAssets/js/plugins/isotope.js"></script>
+    <script src="assets/userAssets/js/plugins/scrolloverflow-fullpage.js"></script>
+    <script src="assets/userAssets/js/plugins/fullpage.js"></script>
+    <script src="assets/userAssets/js/plugins/jquery-ui.js"></script>
+    <script src="assets/userAssets/js/plugins/jquery-ui-touch-punch.js"></script>
+    <script src="assets/userAssets/js/plugins/easyzoom.js"></script>
+    <script src="assets/userAssets/js/plugins/resizesensor.js"></script>
+    <script src="assets/userAssets/js/plugins/sticky-sidebar.js"></script>
+    <script src="assets/userAssets/js/plugins/scrollup.js"></script>
+    <script src="assets/userAssets/js/plugins/select2.min.js"></script>
+    <script src="assets/userAssets/js/plugins/cookie.js"></script>
+    <script src="assets/userAssets/js/plugins/bpopup.js"></script>
+    <script src="assets/userAssets/js/plugins/wow.js"></script>
+    <script src="assets/userAssets/js/plugins/ajax-mail.js"></script>
     <!-- Main JS -->
-    <script src="assets/js/main.js"></script>
+    <script src="assets/userAssets/js/main.js"></script>
 
 
 </body>
