--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -15,7 +15,7 @@
         <nav>
             <ul class="menu-aside">
                 <li class="menu-item active">
-                    <a class="menu-link" href="/admin"> <i class="icon material-icons md-home"></i>
+                    <a class="menu-link" href="/admin/adminHome"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
                 </li>
@@ -31,19 +31,13 @@
                         <span class="text">Users</span>
                     </a>
                 </li>
-                <li class="menu-item ">
-                    <a class="menu-link" href="/admin/addProducts"> <i class="icon material-icons md-add_box"></i>
-                        <span class="text">Add product</span>
-                    </a>
-                    
-                </li>
                
-                <li class="menu-item ">
-                    <a class="menu-link" href="/admin/account"> <i class="icon material-icons md-person"></i>
+                <!-- <li class="menu-item ">
+                    <a class="menu-link" href="/admin/adminlogin"> <i class="icon material-icons md-person"></i>
                         <span class="text">Account</span>
                     </a>
                     
-                </li>
+                </li> -->
                 <li class="menu-item">
                     <a class="menu-link" href="/admin/category"> <i class="icon material-icons md-category"></i>
                         <span class="text">Category</span>
